--- a/alcs-frontend/src/app/features/board/dialogs/modification/modification-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/modification/modification-dialog.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="header-row">
     <div class="left">
-      <h3 class="card-title center">
+      <h3 class="card-title">
         <span class="margin-right">{{ cardTitle }}</span>
         <div class="labels">
           <app-application-type-pill [type]="modification.application.type"></app-application-type-pill>
