--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -4,14 +4,14 @@
 @use '@ng-matero/extensions' as mtx;
 
 // Plus imports for other components in your app.
-@import 'styles/colors';
-@import 'styles/typography';
-@import 'styles/toast';
+@use 'styles/colors';
+@use 'styles/typography';
+@use 'styles/toast';
+@use 'styles/buttons';
+@use 'styles/ngselect';
 
 // ng-select
-@import '~@ng-select/ng-select/themes/material.theme.css';
-@import 'styles/ngselect';
-@import 'styles/buttons';
+@use '@ng-select/ng-select/themes/material.theme.css';
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
@@ -27,7 +27,7 @@ $mat-custom-primary: (
   200: #ccd8ab,
   300: #b7c889,
   400: #a7bc70,
-  500: $primary-color,
+  500: colors.$primary-color,
   600: #90a94f,
   700: #85a046,
   800: #7b973c,
@@ -37,20 +37,20 @@ $mat-custom-primary: (
   A400: #cbff66,
   A700: #c3ff4d,
   contrast: (
-    50: $dark-contrast-text,
-    100: $dark-contrast-text,
-    200: $dark-contrast-text,
-    300: $dark-contrast-text,
-    400: $dark-contrast-text,
-    500: $dark-contrast-text,
-    600: $dark-contrast-text,
-    700: $dark-contrast-text,
-    800: $dark-contrast-text,
-    900: $dark-contrast-text,
-    A100: $dark-contrast-text,
-    A200: $dark-contrast-text,
-    A400: $dark-contrast-text,
-    A700: $dark-contrast-text,
+    50: colors.$dark-contrast-text,
+    100: colors.$dark-contrast-text,
+    200: colors.$dark-contrast-text,
+    300: colors.$dark-contrast-text,
+    400: colors.$dark-contrast-text,
+    500: colors.$dark-contrast-text,
+    600: colors.$dark-contrast-text,
+    700: colors.$dark-contrast-text,
+    800: colors.$dark-contrast-text,
+    900: colors.$dark-contrast-text,
+    A100: colors.$dark-contrast-text,
+    A200: colors.$dark-contrast-text,
+    A400: colors.$dark-contrast-text,
+    A700: colors.$dark-contrast-text,
   ),
 );
 
@@ -60,7 +60,7 @@ $mat-custom-accent: (
   200: #85adce,
   300: #548cba,
   400: #2f73ab,
-  500: $accent-color,
+  500: colors.$accent-color,
   600: #095294,
   700: #07488a,
   800: #053f80,
@@ -70,20 +70,20 @@ $mat-custom-accent: (
   A400: #3778ff,
   A700: #1e67ff,
   contrast: (
-    50: $dark-contrast-text,
-    100: $dark-contrast-text,
-    200: $dark-contrast-text,
-    300: $dark-contrast-text,
-    400: $light-contrast-text,
-    500: $light-contrast-text,
-    600: $light-contrast-text,
-    700: $light-contrast-text,
-    800: $light-contrast-text,
-    900: $light-contrast-text,
-    A100: $dark-contrast-text,
-    A200: $dark-contrast-text,
-    A400: $dark-contrast-text,
-    A700: $light-contrast-text,
+    50: colors.$dark-contrast-text,
+    100: colors.$dark-contrast-text,
+    200: colors.$dark-contrast-text,
+    300: colors.$dark-contrast-text,
+    400: colors.$light-contrast-text,
+    500: colors.$light-contrast-text,
+    600: colors.$light-contrast-text,
+    700: colors.$light-contrast-text,
+    800: colors.$light-contrast-text,
+    900: colors.$light-contrast-text,
+    A100: colors.$dark-contrast-text,
+    A200: colors.$dark-contrast-text,
+    A400: colors.$dark-contrast-text,
+    A700: colors.$light-contrast-text,
   ),
 );
 
@@ -93,7 +93,7 @@ $mat-custom-warn: (
   200: #ec9497,
   300: #e4696d,
   400: #de494e,
-  500: $error-color,
+  500: colors.$error-color,
   600: #d4242a,
   700: #ce1f23,
   800: #c8191d,
@@ -103,20 +103,20 @@ $mat-custom-warn: (
   A400: #ff8688,
   A700: #ff6d6e,
   contrast: (
-    50: $dark-contrast-text,
-    100: $dark-contrast-text,
-    200: $dark-contrast-text,
-    300: $dark-contrast-text,
-    400: $dark-contrast-text,
-    500: $light-contrast-text,
-    600: $light-contrast-text,
-    700: $light-contrast-text,
-    800: $light-contrast-text,
-    900: $light-contrast-text,
-    A100: $dark-contrast-text,
-    A200: $dark-contrast-text,
-    A400: $dark-contrast-text,
-    A700: $dark-contrast-text,
+    50: colors.$dark-contrast-text,
+    100: colors.$dark-contrast-text,
+    200: colors.$dark-contrast-text,
+    300: colors.$dark-contrast-text,
+    400: colors.$dark-contrast-text,
+    500: colors.$light-contrast-text,
+    600: colors.$light-contrast-text,
+    700: colors.$light-contrast-text,
+    800: colors.$light-contrast-text,
+    900: colors.$light-contrast-text,
+    A100: colors.$dark-contrast-text,
+    A200: colors.$dark-contrast-text,
+    A400: colors.$dark-contrast-text,
+    A700: colors.$dark-contrast-text,
   ),
 );
 
@@ -223,7 +223,7 @@ body {
 }
 
 a {
-  color: $link-color;
+  color: colors.$link-color;
   text-decoration: underline;
   cursor: pointer;
 }
@@ -235,7 +235,7 @@ a {
 .form-warning {
   padding: 16px 8px;
   font-size: 16px;
-  background-color: $secondary-color-light;
+  background-color: colors.$secondary-color-light;
   border-radius: 8px;
 }
 
@@ -247,7 +247,7 @@ mat-button-toggle-group {
   }
 
   .mat-button-toggle-checked {
-    background-color: $primary-color-light;
+    background-color: colors.$primary-color-light;
   }
 
   .mat-button-toggle-label-content {
@@ -260,7 +260,7 @@ mat-button-toggle-group {
 }
 
 .mat-calendar-body-cell-content.mat-focus-indicator.mat-calendar-body-selected {
-  color: $white;
+  color: colors.$white;
 }
 
 .no-wrap-tooltip {
