--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.scss
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../../styles/colors";
+@use "../../../../../styles/colors";
 
 :host::ng-deep {
   .view-grid-item {
@@ -27,7 +27,7 @@
 
   .no-data-text {
     text-align: center;
-    color: $grey;
+    color: colors.$grey;
 
     .error {
       justify-content: center;
@@ -74,7 +74,7 @@
   }
 
   .review-table {
-    background-color: $grey-light;
+    background-color: colors.$grey-light;
     display: grid;
     grid-row-gap: 24px;
     grid-column-gap: 16px;
