--- a/alcs-frontend/src/app/features/application/application-meeting/create-application-meeting-dialog/create-application-meeting-dialog.component.scss
+++ b/alcs-frontend/src/app/features/application/application-meeting/create-application-meeting-dialog/create-application-meeting-dialog.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/colors';
+@use '../../../../../styles/colors';
 
 .grid-container {
   display: grid;
@@ -21,13 +21,13 @@ label {
 .warning {
   padding: 16px;
   font-size: 16px;
-  background-color: rgba($secondary-color, 0.2);
+  background-color: rgba(colors.$secondary-color, 0.2);
   border-radius: 8px;
   display: flex;
   align-items: center;
 
   mat-icon {
-    color: $secondary-color-dark;
+    color: colors.$secondary-color-dark;
     margin-right: 16px;
   }
 }
