--- a/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.scss
+++ b/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/colors';
+@use '../../../../../styles/colors';
 
 .flex-container {
   display: flex;
@@ -49,7 +49,7 @@ label {
 }
 
 .other-text {
-  border-bottom: 1px solid $black;
+  border-bottom: 1px solid colors.$black;
   padding-bottom: 4px;
   margin-bottom: -5px;
 }
