--- a/alcs-frontend/src/app/features/board/dialogs/covenant/covenant-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/covenant/covenant-dialog.component.scss
@@ -1,7 +1,7 @@
-@import '../../../../../styles/colors';
+@use '../../../../../styles/colors';
 
 .close {
-  color: $grey;
+  color: colors.$grey;
   display: flex;
   justify-content: right;
   margin: -42px 0 0px;
@@ -59,14 +59,14 @@
   height: 20px;
   margin-top: 2px;
   font-size: 18px;
-  color: $secondary-color-dark;
+  color: colors.$secondary-color-dark;
 }
 
 .selected-board-icon {
   height: 20px;
   margin-top: 2px;
   font-size: 18px;
-  color: $primary-color;
+  color: colors.$primary-color;
 }
 
 .priority {
