--- a/alcs-frontend/src/app/features/board/dialogs/modification/create/create-modification-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/modification/create/create-modification-dialog.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../styles/colors';
+@use '../../../../../../styles/colors';
 
 .content {
   padding: 0 16px;
@@ -56,13 +56,13 @@ mat-dialog-actions {
 .warning {
   padding: 16px;
   font-size: 16px;
-  background-color: rgba($secondary-color, 0.2);
+  background-color: rgba(colors.$secondary-color, 0.2);
   border-radius: 8px;
   display: flex;
   align-items: center;
 
   mat-icon {
-    color: $secondary-color-dark;
+    color: colors.$secondary-color-dark;
     margin-right: 16px;
   }
 }
