--- a/alcs-frontend/src/app/features/board/subtasks/subtasks.component.scss
+++ b/alcs-frontend/src/app/features/board/subtasks/subtasks.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/colors';
+@use '../../../../styles/colors';
 
 .header {
   margin-bottom: 8px !important;
@@ -19,7 +19,7 @@
   transition: all 100ms ease-in-out;
 
   &:hover {
-    border-color: $primary-color;
+    border-color: colors.$primary-color;
   }
 
   & > div {
@@ -34,7 +34,7 @@
 
 .unassigned-circle {
   ::ng-deep.avatar-circle {
-    background-color: $grey;
+    background-color: colors.$grey;
   }
 }
 
@@ -48,25 +48,25 @@
   }
 
   .unassigned {
-    color: $grey;
+    color: colors.$grey;
   }
 
   .in-progress {
-    color: $secondary-color-dark;
+    color: colors.$secondary-color-dark;
   }
 
   .completed {
-    color: $success-color;
+    color: colors.$success-color;
   }
 }
 
 .subtext {
-  color: $grey-dark;
+  color: colors.$grey-dark;
 }
 
 .no-subtasks {
   border: none;
-  background-color: $grey-light;
+  background-color: colors.$grey-light;
   display: flex;
   align-items: center;
   justify-content: center;
