--- a/alcs-frontend/src/app/features/home/agrologist/agrologist.component.scss
+++ b/alcs-frontend/src/app/features/home/agrologist/agrologist.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/colors';
+@use '../../../../styles/colors';
 
 .assignee {
   margin: 18px 0;
@@ -15,23 +15,23 @@
 
   tr.no-data {
     border: none;
-    background-color: $grey-light;
+    background-color: colors.$grey-light;
     align-items: center;
     justify-content: center;
     cursor: auto;
-    border-top: 8px solid white;
+    height: 32px;
   }
 }
 
 .high-priority {
   font-size: 1.4em;
   font-weight: bold;
-  color: $error-color;
+  color: colors.$error-color;
 }
 
 .unassigned {
   font-style: italic;
-  color: $grey;
+  color: colors.$grey;
 }
 
 .subtask-assignee {
