--- a/alcs-frontend/src/app/features/home/assigned/assigned.component.scss
+++ b/alcs-frontend/src/app/features/home/assigned/assigned.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/colors';
+@use '../../../../styles/colors';
 
 .type {
   margin: 8px 8px 0 0;
@@ -17,7 +17,7 @@
 .high-priority {
   font-size: 1.4em;
   font-weight: bold;
-  color: $error-color;
+  color: colors.$error-color;
 }
 
 .table {
@@ -26,7 +26,7 @@
   margin-bottom: 32px;
 
   tr.mdc-data-table__row:hover {
-    box-shadow: 0 0 0 2px rgba($primary-color, 0.9);
+    box-shadow: 0 0 0 2px rgba(colors.$primary-color, 0.9);
     cursor: pointer;
     transform: scale(1);
   }
@@ -38,11 +38,11 @@
 
   tr.no-data {
     border: none;
-    background-color: $grey-light;
+    background-color: colors.$grey-light;
     align-items: center;
     justify-content: center;
     cursor: auto;
     box-shadow: none !important;
-    border-top: 8px solid white;
+    height: 32px;
   }
 }
