--- a/alcs-frontend/src/app/shared/application-document/application-document.component.scss
+++ b/alcs-frontend/src/app/shared/application-document/application-document.component.scss
@@ -1,7 +1,7 @@
-@import '../../../styles/colors';
+@use '../../../styles/colors';
 
 .action-btn.delete {
-  color: $error-color;
+  color: colors.$error-color;
 }
 
 .table-header {
