--- a/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.scss
+++ b/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/colors.scss';
+@use '../../../styles/colors.scss';
 
 .container {
   display: flex;
@@ -13,7 +13,7 @@
 
 .column-header {
   align-items: center;
-  background: rgba($grey-light, 0.9);
+  background: rgba(colors.$grey-light, 0.9);
   display: flex;
   font-size: 17px;
   font-weight: 700;
@@ -42,9 +42,9 @@
 }
 
 .card-container {
-  background-color: $grey-light;
+  background-color: colors.$grey-light;
   border-radius: 4px;
-  color: $black;
+  color: colors.$black;
   height: 100%;
   padding: 12px;
   min-height: 400px;
