--- a/alcs-frontend/src/app/shared/favorite-button/favorite-button.component.scss
+++ b/alcs-frontend/src/app/shared/favorite-button/favorite-button.component.scss
@@ -1,7 +1,7 @@
-@import '../../../styles/colors';
+@use '../../../styles/colors';
 
 button.favorite-btn.gold {
-  color: $secondary-color-dark !important;
+  color: colors.$secondary-color-dark !important;
   visibility: visible;
 }
 
@@ -16,7 +16,7 @@ button.favorite-btn.gold {
 .favorite-btn:hover {
   visibility: visible;
   mat-icon {
-    color: $grey-dark;
+    color: colors.$grey-dark;
   }
 }
 
