--- a/alcs-frontend/src/app/shared/header/header.component.scss
+++ b/alcs-frontend/src/app/shared/header/header.component.scss
@@ -1,10 +1,10 @@
-@import '../../../styles/colors';
+@use '../../../styles/colors';
 
 .header {
   padding: 8px 80px;
   border-bottom: 1px solid;
-  background-color: $primary-color;
-  color: $white;
+  background-color: colors.$primary-color;
+  color: colors.$white;
 
   a {
     text-decoration: none;
@@ -12,7 +12,7 @@
 }
 
 .mat-toolbar {
-  background-color: $primary-color;
+  background-color: colors.$primary-color;
 }
 
 .mat-toolbar-row,
@@ -24,7 +24,7 @@
   border: none;
   background: inherit;
   cursor: pointer;
-  color: $white;
+  color: colors.$white;
   font-size: 20px !important;
   display: flex;
   align-items: center;
@@ -69,12 +69,12 @@ button.mat-mdc-menu-item:hover {
 div.board-item {
   ::ng-deep .favorite-btn {
     visibility: hidden;
-    color: $pending-star;
+    color: colors.$pending-star;
   }
 }
 
 .board-item:hover {
-  background-color: $secondary-color-light;
+  background-color: colors.$secondary-color-light;
 
   ::ng-deep .favorite-btn {
     visibility: visible;
@@ -92,13 +92,13 @@ div.board-item {
 
   button {
     text-align: left;
-    background-color: $white;
+    background-color: colors.$white;
     border: none;
     cursor: pointer;
   }
 
   button:hover {
-    background-color: $secondary-color-light;
+    background-color: colors.$secondary-color-light;
   }
 }
 
@@ -113,7 +113,7 @@ div.board-item {
   border: none;
   background-color: transparent;
   cursor: pointer;
-  color: $white;
+  color: colors.$white;
 
   .avatar-menu-arrow {
     font-size: 18px;
