--- a/alcs-frontend/src/app/shared/header/search-bar/search-bar.component.scss
+++ b/alcs-frontend/src/app/shared/header/search-bar/search-bar.component.scss
@@ -1,9 +1,9 @@
-@import '../../../../styles/colors';
+@use '../../../../styles/colors';
 
 .search-bar {
-  background-color: $primary-color-dark;
+  background-color: colors.$primary-color-dark;
   font-size: 16px;
-  color: $white;
+  color: colors.$white;
   border-radius: 4px;
 
   .mat-icon {
@@ -24,13 +24,13 @@
 }
 
 input {
-  color: $white;
+  color: colors.$white;
 }
 
 .mat-mdc-input-element {
   color: #fff !important;
   &::placeholder {
-    color: $grey-light !important;
+    color: colors.$grey-light !important;
     letter-spacing: 0.5px;
   }
 }
@@ -58,9 +58,9 @@ input {
 
 :host ::ng-deep .mdc-form-field-appearance--outlined.mdc--focused:hover .mdc-form-field--outlined,
 :host ::ng-deep .mdc-form-field-appearance--outlined.mdc--focused .mdc-form-field--outlined {
-  color: $primary-color-light !important;
+  color: colors.$primary-color-light !important;
 }
 
 :host ::ng-deep .mat-mdc-form-field-appearance-outline:hover .mat-mdc-form-field-outline {
-  color: rgba($primary-color-light, 0.7);
+  color: rgba(colors.$primary-color-light, 0.7);
 }
