--- a/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.scss
+++ b/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/colors';
+@use '../../../styles/colors';
 
 .inline-date-picker-wrapper {
   padding-top: 4px;
@@ -38,7 +38,7 @@
 }
 
 .save {
-  color: $primary-color;
+  color: colors.$primary-color;
 }
 
 :host::ng-deep {
