--- a/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.scss
+++ b/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/colors';
-@import '../../../styles/typography';
+@use '../../../styles/colors';
+@use '../../../styles/typography';
 
 .search-bar {
   display: flex;
@@ -38,18 +38,18 @@
 }
 
 .main-panel-header {
-  border: 2px solid $white;
+  border: 2px solid colors.$white;
   border-radius: 5px;
   box-shadow: 0 2px 8px 1px rgba(0, 0, 0, 0.25);
   transition: all 100ms ease-in-out;
 
   &:hover {
-    border-color: $primary-color;
+    border-color: colors.$primary-color;
     background-color: unset !important;
 
     ::ng-deep .favorite-btn {
       visibility: visible;
-      color: $grey;
+      color: colors.$grey;
     }
   }
 }
@@ -91,8 +91,8 @@ mat-panel-description {
 }
 
 .main-panel-date {
-  @extend h4;
-  color: $black;
+  //FIX @extend typography, h4;
+  color: colors.$black;
 
   mat-icon {
     margin-right: 8px;
@@ -102,12 +102,12 @@ mat-panel-description {
 :host::ng-deep .mat-expansion-indicator::after {
   border-width: 0 4px 4px 0;
   padding: 5px;
-  color: $black;
+  color: colors.$black;
 }
 
 .main-panel-no-meetings {
-  @extend h4;
-  color: $grey;
+  //FIX @extend typography, h4;
+  color: colors.$grey;
 }
 
 .meetings-container {
@@ -127,92 +127,92 @@ mat-panel-description {
   }
 
   .previous-meetings {
-    background-color: rgba($secondary-color-light, 0.8);
+    background-color: rgba(colors.$secondary-color-light, 0.8);
 
     .meeting-header-previous.mat-expansion-panel-header:hover {
-      border: 2px solid $secondary-color-dark;
-      background-color: $white;
+      border: 2px solid colors.$secondary-color-dark;
+      background-color: colors.$white;
 
       mat-panel-title {
-        color: $secondary-color-dark;
+        color: colors.$secondary-color-dark;
       }
     }
 
     .meeting-header-previous.mat-expansion-panel-header.mat-expanded {
-      background-color: $secondary-color-dark;
+      background-color: colors.$secondary-color-dark;
 
       &:hover {
-        background-color: $secondary-color;
-        border-color: $secondary-color;
+        background-color: colors.$secondary-color;
+        border-color: colors.$secondary-color;
       }
 
       mat-panel-title {
-        color: $white;
+        color: colors.$white;
       }
     }
 
     .application-card:hover {
-      border-color: $secondary-color;
+      border-color: colors.$secondary-color;
     }
   }
 
   .next-meeting {
-    background-color: rgba($primary-color-light, 0.5);
+    background-color: rgba(colors.$primary-color-light, 0.5);
 
     .meeting-header-next.mat-expansion-panel-header:hover {
-      border: 2px solid $primary-color;
-      background-color: $white;
+      border: 2px solid colors.$primary-color;
+      background-color: colors.$white;
 
       mat-panel-title {
-        color: $primary-color;
+        color: colors.$primary-color;
       }
     }
 
     .meeting-header-next.mat-expansion-panel-header.mat-expanded {
-      background-color: $primary-color-dark;
+      background-color: colors.$primary-color-dark;
 
       &:hover {
-        background-color: $primary-color;
-        border-color: $primary-color;
+        background-color: colors.$primary-color;
+        border-color: colors.$primary-color;
       }
 
       mat-panel-title {
-        color: $white;
+        color: colors.$white;
       }
     }
 
     .application-card:hover {
-      border-color: $primary-color;
+      border-color: colors.$primary-color;
     }
   }
 
   .upcoming-meetings {
-    background-color: rgba($accent-color-light, 0.5);
+    background-color: rgba(colors.$accent-color-light, 0.5);
 
     .meeting-header-upcoming.mat-expansion-panel-header:hover {
-      border: 2px solid $accent-color;
-      background-color: $white;
+      border: 2px solid colors.$accent-color;
+      background-color: colors.$white;
 
       mat-panel-title {
-        color: $accent-color;
+        color: colors.$accent-color;
       }
     }
 
     .meeting-header-upcoming.mat-expansion-panel-header.mat-expanded {
-      background-color: $accent-color-dark;
+      background-color: colors.$accent-color-dark;
 
       &:hover {
-        background-color: $accent-color;
-        border-color: $accent-color;
+        background-color: colors.$accent-color;
+        border-color: colors.$accent-color;
       }
 
       mat-panel-title {
-        color: $white;
+        color: colors.$white;
       }
     }
 
     .application-card:hover {
-      border-color: $accent-color;
+      border-color: colors.$accent-color;
     }
   }
 }
@@ -221,8 +221,8 @@ mat-panel-description {
   margin-top: 16px;
 
   & > mat-expansion-panel-header {
-    background: $white;
-    box-shadow: 0px 4px 8px 1px rgba(0, 36, 71, 0.15);
+    background: colors.$white;
+    box-shadow: 0 4px 8px 1px rgba(0, 36, 71, 0.15);
   }
 
   .mat-panel-title {
@@ -236,20 +236,20 @@ mat-panel-description {
 
 @keyframes border-pulsate {
   0% {
-    border-color: rgba($primary-color, 1);
+    border-color: rgba(colors.$primary-color, 1);
   }
   50% {
-    border-color: rgba($primary-color, 0.2);
+    border-color: rgba(colors.$primary-color, 0.2);
   }
   100% {
-    border-color: rgba($primary-color, 1);
+    border-color: rgba(colors.$primary-color, 1);
   }
 }
 
 .application-card {
   margin-bottom: 16px;
   padding: 8px 16px;
-  background-color: $white;
+  background-color: colors.$white;
   border-radius: 4px;
   width: 100%;
   cursor: pointer;
@@ -262,7 +262,7 @@ mat-panel-description {
   }
 
   &.application-highlighted {
-    border: 5px solid rgba($primary-color, 0.5);
+    border: 5px solid rgba(colors.$primary-color, 0.5);
     animation: border-pulsate 2s infinite;
   }
 }
@@ -287,11 +287,11 @@ mat-panel-description {
 }
 
 :host::ng-deep .mat-expansion-panel-body {
-  background-color: $grey-light;
+  background-color: colors.$grey-light;
 }
 
 .no-meetings {
-  color: $grey;
+  color: colors.$grey;
   font-style: italic;
   margin-top: 24px !important;
 }
