--- a/alcs-frontend/src/app/shared/timeline/timeline.component.scss
+++ b/alcs-frontend/src/app/shared/timeline/timeline.component.scss
@@ -1,5 +1,4 @@
-@import '../../../styles/colors';
-@import '../../../styles/typography';
+@use '../../../styles/typography';
 
 .timeline {
   padding: 0;
@@ -9,7 +8,7 @@
   margin: 16px 32px;
 
   th {
-    @extend .subheading2;
+    font-size: 16px;
     text-align: left;
   }
 }
