--- a/alcs-frontend/src/styles/buttons.scss
+++ b/alcs-frontend/src/styles/buttons.scss
@@ -1,4 +1,4 @@
-@import './colors';
+@use './colors';
 
 .mat-flat-button,
 .mat-stroked-button {
@@ -13,15 +13,15 @@
   }
 
   &:not(.mat-button-disabled):hover {
-    background-color: $primary-color-light;
+    background-color: colors.$primary-color-light;
 
     .mat-button-wrapper {
-      color: $primary-color;
+      color: colors.$primary-color;
     }
   }
 
   &:active {
-    background-color: $primary-color-dark;
+    background-color: colors.$primary-color-dark;
 
     .mat-button-wrapper {
       color: #fff;
@@ -37,15 +37,15 @@
   }
 
   &:not(.mat-button-disabled):hover {
-    background-color: $accent-color-light;
+    background-color: colors.$accent-color-light;
 
     .mat-button-wrapper {
-      color: $accent-color;
+      color: colors.$accent-color;
     }
   }
 
   &:active {
-    background-color: $accent-color-dark;
+    background-color: colors.$accent-color-dark;
 
     .mat-button-wrapper {
       color: #fff;
@@ -55,24 +55,24 @@
 
 .mat-stroked-button.mat-primary {
   &:not(.mat-button-disabled) {
-    border-color: $primary-color-dark;
+    border-color: colors.$primary-color-dark;
   }
 
   .mat-button-wrapper {
     text-transform: uppercase;
-    color: $primary-color;
+    color: colors.$primary-color;
   }
 
   &:not(.mat-button-disabled):hover {
-    background-color: $primary-color-light;
+    background-color: colors.$primary-color-light;
 
     .mat-button-wrapper {
-      color: $primary-color;
+      color: colors.$primary-color;
     }
   }
 
   &:active {
-    background-color: $primary-color-dark;
+    background-color: colors.$primary-color-dark;
 
     .mat-button-wrapper {
       color: #fff;
@@ -82,39 +82,39 @@
 
 .mat-stroked-button.mat-accent {
   &:not(.mat-button-disabled) {
-    border-color: $accent-color-dark;
+    border-color: colors.$accent-color-dark;
   }
 
   .mat-button-wrapper {
     text-transform: uppercase;
-    color: $accent-color;
+    color: colors.$accent-color;
   }
 
   &:not(.mat-button-disabled):hover {
-    border-color: $accent-color-dark;
-    background-color: $accent-color-light;
+    border-color: colors.$accent-color-dark;
+    background-color: colors.$accent-color-light;
 
     .mat-button-wrapper {
-      color: $accent-color-dark;
+      color: colors.$accent-color-dark;
     }
   }
 
   &:active {
-    background-color: $accent-color-dark;
+    background-color: colors.$accent-color-dark;
 
     .mat-button-wrapper {
-      color: $white;
+      color: colors.$white;
     }
   }
 }
 
 .mat-button-disabled {
-  background-color: $grey !important;
+  background-color: colors.$grey !important;
   color: #fff !important;
 }
 
 .mat-icon-button:hover {
-  background-color: rgba($grey, 0.2);
+  background-color: rgba(colors.$grey, 0.2);
 }
 
 button.mdc-button {
