--- a/alcs-frontend/src/styles/typography.scss
+++ b/alcs-frontend/src/styles/typography.scss
@@ -1,5 +1,5 @@
-@import '@bcgov/bc-sans/css/BCSans.css';
-@import './colors';
+@use './colors';
+@use '@bcgov/bc-sans/css/BCSans.css';
 
 $font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
 
@@ -62,7 +62,7 @@ p,
 .body-large {
   @include typography-style(19px, 400);
   line-height: 24px;
-  color: $grey-dark;
+  color: colors.$grey-dark;
 }
 
 .body-small {
@@ -110,6 +110,6 @@ button {
 }
 
 .mention.green {
-  color: $primary-color-dark;
+  color: colors.$primary-color-dark;
   background: rgba(46, 133, 64, 0.25) !important;
 }
